# pipeline-for-testing

./: AGENTS.md  LABBOOK.md  RUN_BLINDED_AND_UNBLINDED_ANALYSIS.md  SESSION_SUMMARY.md  STATISTICS_CAVEATS_PROMPT.md  STATISTICS_IMPLEMENTATION_PROMPT.md  pyproject.toml
.codex/skills/: INDEX.md
.codex/skills/hep-analysis-env-setup/: SKILL.md
.codex/skills/hep-analysis-env-setup/agents/: openai.yaml
.codex/skills/hep-analysis-env-setup/references/: command-recipes.md
.codex/skills/hep-analysis-env-setup/scripts/: _repo_env.sh  check_repo_env.sh  run_in_repo_env.sh
.codex/skills/hep-analysis-generators/: SKILL.md
.codex/skills/hep-analysis-generators/agents/: openai.yaml
.codex/skills/hep-analysis-inversions/: SKILL.md
.codex/skills/hep-analysis-inversions/agents/: openai.yaml
.codex/skills/hep-analysis-meta-pipeline/: SKILL.md
.codex/skills/hep-analysis-meta-pipeline/agents/: openai.yaml
.codex/skills/hep-analysis-pipelines/: SKILL.md
.codex/skills/hep-analysis-reviewers/: SKILL.md
.codex/skills/hep-analysis-tool-wrappers/: SKILL.md
.codex/skills/hep-meta-first/: SKILL.md
analysis/: pipeline.py  top_categorization.py  tth_bdt_pipeline.py  tth_bdt_training.py  tth_categorization.py  tth_workspace.py
analysis/report/: artifacts.py  reviews.py
analysis/stats/: fit.py  significance.py
pdf/: higgs_to_diphoton_conceptual_narrative.md  higgs_to_diphoton_flowchart.mmd  pandoc_pdf_header.tex
reports/: final_analysis_report_20260403.md
tests/: test_reporting_contracts.py  test_stats_asimov.py  test_top_categorization.py
(+96 files in other folders)
